Large patch from Raymond Bosman <bosman_AT_hetnet.nl> to tidy up the way toolbar states are handled.
svn path=/trunk/kdesdk/umbrello/; revision=309400

--- a/umbrello/Makefile.am
+++ b/umbrello/Makefile.am
@@ -67,6 +67,13 @@ statewidget.cpp \
 stereotype.cpp \
 template.cpp \
 textblock.cpp \
+toolbarstate.cpp \
+toolbarstatearrow.cpp \
+toolbarstateassociation.cpp \
+toolbarstatefactory.cpp \
+toolbarstatemessages.cpp \
+toolbarstateother.cpp \
+toolbarstatepool.cpp \
 uml.cpp \
 umlattributelist.cpp \
 umlcanvasobject.cpp \
