FloatingText cleanup: Avoid direct usages of MessageWidget and AssociationWidget. The new class LinkWidget is the abstract base class of the latter two.
svn path=/trunk/kdesdk/umbrello/; revision=320994

--- a/umbrello/Makefile.am
+++ b/umbrello/Makefile.am
@@ -48,6 +48,7 @@ interface.cpp \
 interfacewidget.cpp \
 kstartuplogo.cpp \
 linepath.cpp \
+linkwidget.cpp \
 listpopupmenu.cpp \
 main.cpp \
 messagewidget.cpp \
