icons for wish 67058: feel free to improve the icons
svn path=/trunk/kdesdk/umbrello/; revision=327528

--- a/umbrello/pics/Makefile.am
+++ b/umbrello/pics/Makefile.am
@@ -2,6 +2,12 @@ picsdir = $(kde_datadir)/umbrello/pics
 
 pics_DATA = actor.png \
 aggregation.png \
+align_left.png \
+align_right.png \
+align_top.png \
+align_bottom.png \
+align_vert_middle.png \
+align_hori_middle.png \
 anchor.png \
 arrow.png \
 association.png \
