add tools for alignment of several objects (wish 67058)
svn path=/trunk/kdesdk/umbrello/; revision=327529

--- a/umbrello/Makefile.am
+++ b/umbrello/Makefile.am
@@ -4,6 +4,7 @@ umbrello_COMPILE_FIRST = version.h
 umbrello_SOURCES = activitywidget.cpp \
 actor.cpp \
 actorwidget.cpp \
+aligntoolbar.cpp \
 artifact.cpp \
 artifactwidget.cpp \
 association.cpp \
