Umbrello also handles compressed XMI files
svn path=/trunk/kdesdk/umbrello/; revision=329057

--- a/umbrello/x-umbrello.desktop
+++ b/umbrello/x-umbrello.desktop
@@ -3,7 +3,7 @@ Type=MimeType
 MimeType=application/x-uml
 Icon=umbrellofile
 DefaultApp=umbrello
-Patterns=*.xmi;*.XMI;
+Patterns=*.xmi;*.XMI;*.xmi.tgz;*.xmi.tar.bz2;
 Comment=Umbrello UML Modeller File
 Comment[ca]=Fitxer de model UML
 Comment[cs]=Soubor UML modeláře Umbrello
@@ -14,16 +14,20 @@ Comment[es]=Archivo del modeladore UML Umbrello
 Comment[et]=Umbrello UML-fail
 Comment[fi]=Umbrello UML-mallinnustiedosto
 Comment[fr]=Fichier du modeleur UML Umbrello
-Comment[hi]=अम्बरैलो यूएमएल मॉडलर फाइल
+Comment[hi]=अम्बरैलो यूएमएल मॉडलर फ़ाइल
 Comment[hu]=Umbrello UML-fájl
-Comment[it]=File del modellatore Umbrello UML
+Comment[is]=Umbrello UML Modeller Skrá
+Comment[it]=File del modellatore UML Umbrello
+Comment[nb]=Umbrello UML-modelleringsfil
 Comment[nl]=Umbrello UML Modeller-bestand
+Comment[pl]=Plik modelera UML Umbrello
 Comment[pt]=Ficheiro do Modelador de UML Umbrello
 Comment[pt_BR]=Arquivo de Modelador UML Umbrello
 Comment[ru]=Файл моделирования UML Umbrello
 Comment[sk]=Súbor pre Umbrello modelár UML
 Comment[sl]=Datoteka za modelirnik Umbrello UML
 Comment[sr]=фајл Umbrello UML моделара
+Comment[sr@Latn]=fajl Umbrello UML modelara
 Comment[sv]=Umbrello UML-modelleringsfil
 Comment[ta]=  அம்ரல்லோ UML மோடெல்லார்
 Comment[xx]=xxUmbrello UML Modeller Filexx
