Factor the frequently used single-line QLabel/QLineEdit combo into  Dialog_Utils::makeLabeledEditField().
svn path=/trunk/kdesdk/umbrello/; revision=334755

--- a/umbrello/dialogs/Makefile.am
+++ b/umbrello/dialogs/Makefile.am
@@ -34,6 +34,7 @@ codeviewerdialog.cpp \
 codevieweroptionspage.cpp \
 defaultcodegenpolicypage.cpp \
 diagramprintpage.cpp \
+dialog_utils.cpp \
 interfacepropertiespage.cpp \
 notedialog.cpp \
 overwritedialogue.cpp \
