--- a/umbrello/umbrello.desktop
+++ b/umbrello/umbrello.desktop
@@ -7,10 +7,12 @@ MiniIcon=umbrello
 DocPath=umbrello/index.html
 Terminal=false
 Name=Umbrello
-Name[da]=Umbrelo
 Name[hi]=अम्बरैलो
 Name[ta]=  அம்ரல்லோ
+Name[xx]=xxUmbrelloxx
 GenericName=UML Modeller
+GenericName[bs]=UML modeler
+GenericName[ca]=Modelador UML
 GenericName[cs]=UML modelář
 GenericName[cy]=Modelydd UML
 GenericName[da]=UML Modellererer
@@ -22,14 +24,20 @@ GenericName[fr]=Modeleur UML
 GenericName[hi]=यूएमएल मॉडलर
 GenericName[hu]=UML-modellező
 GenericName[it]=Modellatore UML
+GenericName[ja]=UML モデラ
+GenericName[nb]=UML-modelleringsprogram
 GenericName[nl]=UML-modeller
+GenericName[pl]=Program do modelowania UML
 GenericName[pt]=Modelador de UML
 GenericName[pt_BR]=Modelador UML
 GenericName[ru]=Средство UML моделирования
 GenericName[sk]=Modelár UML
 GenericName[sl]=Mofdelirnik UML
 GenericName[sr]=Umbrello UML моделар
+GenericName[sr@Latn]=Umbrello UML modelar
 GenericName[sv]=UML-modellering
 GenericName[ta]=UML மோடெல்லார்
+GenericName[xx]=xxUML Modellerxx
+GenericName[zh_CN]=UML 建模工具
 MimeType=application/x-uml
 Categories=Qt;KDE;Development
