CVS_SILENT made messages
svn path=/branches/KDE_3_3_BRANCH/kdesdk/umbrello/; revision=347186

--- a/umbrello/umbrello.desktop
+++ b/umbrello/umbrello.desktop
@@ -9,7 +9,6 @@ Terminal=false
 Name=Umbrello
 Name[hi]=अम्बरैलो
 Name[ta]=  அம்ரல்லோ
-Name[xx]=xxUmbrelloxx
 GenericName=UML Modeller
 GenericName[bs]=UML modeler
 GenericName[ca]=Modelador UML
@@ -37,7 +36,7 @@ GenericName[sr]=Umbrello UML моделар
 GenericName[sr@Latn]=Umbrello UML modelar
 GenericName[sv]=UML-modellering
 GenericName[ta]=UML மோடெல்லார்
-GenericName[xx]=xxUML Modellerxx
+GenericName[tg]=Воситаи UML моделкунонӣ
 GenericName[zh_CN]=UML 建模工具
 MimeType=application/x-uml
 Categories=Qt;KDE;Development
