--- a/umbrello/x-umbrello.desktop
+++ b/umbrello/x-umbrello.desktop
@@ -32,5 +32,5 @@ Comment[sr]=фајл Umbrello UML моделара
 Comment[sr@Latn]=fajl Umbrello UML modelara
 Comment[sv]=Umbrello UML-modelleringsfil
 Comment[ta]=  அம்ரல்லோ UML மாடுலர் கோப்பு
-Comment[xx]=xxUmbrello UML Modeller Filexx
+Comment[tg]=Файли моделкунонии UML Umbrello
 Comment[zh_CN]=Umbrello UML 建模工具文件
