Fix beastie 89582 remove need for flex library which is no longer used
svn path=/trunk/kdesdk/umbrello/; revision=347944

--- a/umbrello/Makefile.am
+++ b/umbrello/Makefile.am
@@ -96,7 +96,7 @@ usecasewidget.cpp \
 widget_utils.cpp \
 worktoolbar.cpp
 
-umbrello_LDADD   = ./refactoring/librefactoring.la ./classparser/libclassparser.la ./clipboard/libclipboard.la ./dialogs/libdialogs.la ./codegenerators/libcodegenerator.la -lfl $(LIB_KDEPRINT) $(LIB_KIO)
+umbrello_LDADD   = ./refactoring/librefactoring.la ./classparser/libclassparser.la ./clipboard/libclipboard.la ./dialogs/libdialogs.la ./codegenerators/libcodegenerator.la  $(LIB_KDEPRINT) $(LIB_KIO)
 
 SUBDIRS = classparser dialogs clipboard pics codegenerators headings diagram refactoring plugins
 
