--- a/umbrello/Makefile.am
+++ b/umbrello/Makefile.am
@@ -94,7 +94,7 @@ usecase.cpp \
 usecasewidget.cpp \
 worktoolbar.cpp
 
-umbrello_LDADD   = ./refactoring/librefactoring.la ./classparser/libclassparser.la ./clipboard/libclipboard.la ./dialogs/libdialogs.la ./codegenerators/libcodegenerator.la -lfl $(LIB_KDEPRINT) $(LIB_KIO)
+umbrello_LDADD   = ./refactoring/librefactoring.la ./classparser/libclassparser.la ./clipboard/libclipboard.la ./dialogs/libdialogs.la ./codegenerators/libcodegenerator.la $(LIB_KDEPRINT) $(LIB_KIO)
 
 SUBDIRS = classparser dialogs clipboard pics codegenerators headings diagram refactoring plugins
 
