Patch for bug 90102 by Pekka (pjaaskel_AT_cs.tut.fi) and me.
svn path=/trunk/kdesdk/umbrello/; revision=349145

--- a/umbrello/Makefile.am
+++ b/umbrello/Makefile.am
@@ -37,6 +37,7 @@ componentwidget.cpp \
 configurable.cpp \
 datatype.cpp \
 datatypewidget.cpp \
+dialog_utils.cpp \
 docwindow.cpp \
 enum.cpp \
 enumliteral.cpp \
