CVS_SILENT made messages (.desktop file)
svn path=/trunk/kdesdk/umbrello/; revision=361106

--- a/umbrello/x-umbrello.desktop
+++ b/umbrello/x-umbrello.desktop
@@ -33,5 +33,6 @@ Comment[sr]=фајл Umbrello UML моделара
 Comment[sr@Latn]=fajl Umbrello UML modelara
 Comment[sv]=Umbrello UML-modelleringsfil
 Comment[ta]=  அம்ரல்லோ UML மாடுலர் கோப்பு
+Comment[tg]=Файли моделкунонии UML Umbrello
 Comment[xx]=xxUmbrello UML Modeller Filexx
 Comment[zh_CN]=Umbrello UML 建模工具文件
