--- a/umbrello/pics/Makefile.am
+++ b/umbrello/pics/Makefile.am
@@ -53,6 +53,8 @@ package.png \
 artifact.png \
 box.png \
 node.png \
+entity.png \
+relationship.png \
 cursor-actor.png \
 cursor-usecase.png \
 cursor-initial-state.png \
@@ -80,7 +82,8 @@ cursor-fork.png \
 cursor-note.png \
 cursor-branch.png \
 cursor-generalisation.png \
-cursor-object.png
+cursor-object.png \
+cursor-entity.png \
+cursor-relationship.png
 
-KDE_ICON = umbrello_diagram_activity umbrello_diagram_class umbrello_diagram_collaboration umbrello_diagram_component umbrello_diagram_deployment umbrello_diagram_sequence umbrello_diagram_state umbrello_diagram_usecase
-
+KDE_ICON = umbrello_diagram_activity umbrello_diagram_class umbrello_diagram_collaboration umbrello_diagram_component umbrello_diagram_deployment umbrello_diagram_sequence umbrello_diagram_state umbrello_diagram_usecase umbrello_diagram_entityrelationship
