Add back the old {Cpp,Java}Writer. A new option in the Umbrello general configuration controls whether the old or new generators are used. BUG:95924
svn path=/trunk/kdesdk/umbrello/; revision=373809

--- a/umbrello/codegenerators/Makefile.am
+++ b/umbrello/codegenerators/Makefile.am
@@ -21,7 +21,8 @@ libcodegenerator_la_SOURCES = codegenfactory.cpp classifierinfo.cpp \
 				cppcodegenerationpolicy.cpp cppcodegenerationpolicypage.cpp \
 				cppcodegenerationformbase.ui cppcodegenerationform.cpp \
 				simplecodegenerator.cpp \
-				adawriter.cpp aswriter.cpp jswriter.cpp idlwriter.cpp perlwriter.cpp \
+				adawriter.cpp aswriter.cpp cppwriter.cpp javawriter.cpp jswriter.cpp \
+				idlwriter.cpp perlwriter.cpp \
 				phpwriter.cpp php5writer.cpp pythonwriter.cpp sqlwriter.cpp xmlschemawriter.cpp \
 				xmlelementcodeblock.cpp xmlcodecomment.cpp
 libcodegenerator_la_COMPILE_FIRST = ../dialogs/codegenerationpolicybase.h
