CVS_SILENT made messages (.desktop file)
svn path=/branches/KDE_3_3_BRANCH/kdesdk/umbrello/; revision=374113

--- a/umbrello/umbrello.desktop
+++ b/umbrello/umbrello.desktop
@@ -10,6 +10,7 @@ Name=Umbrello
 Name[hi]=अम्बरैलो
 Name[ta]=  அம்ரல்லோ
 GenericName=UML Modeller
+GenericName[ar]=صانع UML
 GenericName[bs]=UML modeler
 GenericName[ca]=Modelador UML
 GenericName[cs]=UML modelář
