--- a/umbrello/umbrello.desktop
+++ b/umbrello/umbrello.desktop
@@ -37,6 +37,8 @@ GenericName[sr]=Umbrello UML моделар
 GenericName[sr@Latn]=Umbrello UML modelar
 GenericName[sv]=UML-modellering
 GenericName[ta]=UML மோடெல்லார்
+GenericName[tg]=Воситаи UML моделкунонӣ
+GenericName[uk]=Засіб моделювання UML
 GenericName[xx]=xxUML Modellerxx
 GenericName[zh_CN]=UML 建模工具
 MimeType=application/x-uml
