CVS_SILENT made messages (.desktop file)
svn path=/trunk/kdesdk/umbrello/; revision=384848

--- a/umbrello/x-umbrello.desktop
+++ b/umbrello/x-umbrello.desktop
@@ -14,6 +14,7 @@ Comment[da]=Umbrello UML Modellerer fil
 Comment[de]=Umbrello-Datei
 Comment[es]=Archivo del modeladore UML Umbrello
 Comment[et]=Umbrello UML-fail
+Comment[eu]=Umbrello UML modelatzaile fitxategia
 Comment[fi]=Umbrello UML-mallinnustiedosto
 Comment[fr]=Fichier du modeleur UML Umbrello
 Comment[hi]=अम्बरैलो यूएमएल मॉडलर फ़ाइल
@@ -34,5 +35,6 @@ Comment[sr@Latn]=fajl Umbrello UML modelara
 Comment[sv]=Umbrello UML-modelleringsfil
 Comment[ta]=  அம்ரல்லோ UML மாடுலர் கோப்பு
 Comment[tg]=Файли моделкунонии UML Umbrello
+Comment[uk]=Файл моделювання UML Umbrello
 Comment[xx]=xxUmbrello UML Modeller Filexx
 Comment[zh_CN]=Umbrello UML 建模工具文件
