CVS_SILENT made messages (.desktop file)
svn path=/branches/KDE_3_3_BRANCH/kdesdk/umbrello/; revision=384875

--- a/umbrello/x-umbrello.desktop
+++ b/umbrello/x-umbrello.desktop
@@ -5,6 +5,7 @@ Icon=umbrellofile
 DefaultApp=umbrello
 Patterns=*.xmi;*.XMI;*.xmi.tgz;*.xmi.tar.bz2;
 Comment=Umbrello UML Modeller File
+Comment[ar]=صانع ملف Umbrello UML
 Comment[bs]=Umbrello UML modeler datoteka
 Comment[ca]=Fitxer de model UML
 Comment[cs]=Soubor UML modeláře Umbrello
@@ -13,6 +14,7 @@ Comment[da]=Umbrello UML Modellerer fil
 Comment[de]=Umbrello-Datei
 Comment[es]=Archivo del modeladore UML Umbrello
 Comment[et]=Umbrello UML-fail
+Comment[eu]=Umbrello UML modelatzaile fitxategia
 Comment[fi]=Umbrello UML-mallinnustiedosto
 Comment[fr]=Fichier du modeleur UML Umbrello
 Comment[hi]=अम्बरैलो यूएमएल मॉडलर फ़ाइल
