Prepare for IDL import - last addition for 1.4
svn path=/trunk/kdesdk/umbrello/; revision=385058

--- a/umbrello/Makefile.am
+++ b/umbrello/Makefile.am
@@ -48,6 +48,7 @@ enumwidget.cpp \
 floatingtext.cpp \
 kplayerslideraction.cpp \
 hierarchicalcodeblock.cpp \
+idlimport.cpp \
 infowidget.cpp \
 interface.cpp \
 interfacewidget.cpp \
