CVS_SILENT made messages (.desktop file)
svn path=/trunk/kdesdk/umbrello/; revision=388887

--- a/umbrello/umbrello.desktop
+++ b/umbrello/umbrello.desktop
@@ -15,7 +15,7 @@ GenericName[bs]=UML modeler
 GenericName[ca]=Modelador UML
 GenericName[cs]=UML modelář
 GenericName[cy]=Modelydd UML
-GenericName[da]=UML Modellererer
+GenericName[da]=UML Modellering
 GenericName[de]=UML-Modellierer
 GenericName[es]=Modelador de UML
 GenericName[et]=UML-i modelleerimise rakendus
