--- a/umbrello/x-umbrello.desktop
+++ b/umbrello/x-umbrello.desktop
@@ -10,7 +10,7 @@ Comment[bs]=Umbrello UML modeler datoteka
 Comment[ca]=Fitxer de model UML
 Comment[cs]=Soubor UML modeláře Umbrello
 Comment[cy]=Ffeil Modelydd UML Umbrello
-Comment[da]=Umbrello UML Modellerer fil
+Comment[da]=Umbrello UML-fil
 Comment[de]=Umbrello-Datei
 Comment[es]=Archivo del modeladore UML Umbrello
 Comment[et]=Umbrello UML-fail
