Patch from Andi Fischer prepares for further work on state diagrams.
svn path=/trunk/kdesdk/umbrello/; revision=397048

--- a/umbrello/pics/Makefile.am
+++ b/umbrello/pics/Makefile.am
@@ -9,8 +9,11 @@ align_bottom.png \
 align_vert_middle.png \
 align_hori_middle.png \
 anchor.png \
+andline.png \
 arrow.png \
 association.png \
+choice-rhomb.png \
+choice-round.png \
 component.png \
 composition.png \
 containment.png \
@@ -30,11 +33,15 @@ CVpublic_signal.png \
 CVpublic_slot.png \
 CVpublic_var.png \
 CVstruct.png \
+deep-history.png \
+shallow-history.png \
 dependency.png \
 end_state.png \
 generalisation.png \
 initial_state.png \
 interface.png \
+join.png \
+junction.png \
 datatype.png \
 enum.png \
 message-synchronous.png \
@@ -49,6 +56,7 @@ uniassociation.png \
 usecase.png \
 branch.png \
 fork.png \
+state-fork.png \
 package.png \
 artifact.png \
 box.png \
@@ -56,6 +64,14 @@ node.png \
 entity.png \
 relationship.png \
 cursor-actor.png \
+cursor-andline.png \
+cursor-choice-rhomb.png \
+cursor-choice-round.png \
+cursor-deep-history.png \
+cursor-join.png \
+cursor-junction.png \
+cursor-shallow-history.png \
+cursor-state-fork.png \
 cursor-usecase.png \
 cursor-initial-state.png \
 cursor-package.png \
