CVS_SILENT made messages (.desktop file)
svn path=/branches/KDE_3_4_BRANCH/kdesdk/umbrello/; revision=405218

--- a/umbrello/umbrello.desktop
+++ b/umbrello/umbrello.desktop
@@ -9,7 +9,6 @@ Terminal=false
 Name=Umbrello
 Name[hi]=अम्बरैलो
 Name[ta]=  அம்ரல்லோ
-Name[xx]=xxUmbrelloxx
 GenericName=UML Modeller
 GenericName[bs]=UML modeler
 GenericName[ca]=Modelador UML
@@ -19,6 +18,7 @@ GenericName[da]=UML Modellering
 GenericName[de]=UML-Modellierer
 GenericName[es]=Modelador de UML
 GenericName[et]=UML-i modelleerimise rakendus
+GenericName[eu]=UML modelatzailea
 GenericName[fi]=UML-mallintaja
 GenericName[fr]=Modeleur UML
 GenericName[hi]=यूएमएल मॉडलर
@@ -39,7 +39,6 @@ GenericName[sv]=UML-modellering
 GenericName[ta]=UML மோடெல்லார்
 GenericName[tg]=Воситаи UML моделкунонӣ
 GenericName[uk]=Засіб моделювання UML
-GenericName[xx]=xxUML Modellerxx
 GenericName[zh_CN]=UML 建模工具
 MimeType=application/x-uml
 Categories=Qt;KDE;Development;
