--- a/umbrello/umbrello.desktop
+++ b/umbrello/umbrello.desktop
@@ -18,6 +18,7 @@ GenericName[da]=UML Modellering
 GenericName[de]=UML-Modellierer
 GenericName[es]=Modelador de UML
 GenericName[et]=UML-i modelleerimise rakendus
+GenericName[eu]=UML modelatzailea
 GenericName[fi]=UML-mallintaja
 GenericName[fr]=Modeleur UML
 GenericName[hi]=यूएमएल मॉडलर
