SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdesdk/umbrello/; revision=430367

--- a/umbrello/x-umbrello.desktop
+++ b/umbrello/x-umbrello.desktop
@@ -30,7 +30,7 @@ Comment[pt_BR]=Arquivo de Modelador UML Umbrello
 Comment[ru]=Файл моделирования UML Umbrello
 Comment[sk]=Súbor pre Umbrello modelár UML
 Comment[sl]=Datoteka za modelirnik Umbrello UML
-Comment[sr]=фајл Umbrello UML моделара
+Comment[sr]=Фајл Umbrello-а, UML моделара
 Comment[sr@Latn]=fajl Umbrello UML modelara
 Comment[sv]=Umbrello UML-modelleringsfil
 Comment[ta]=  அம்ரல்லோ UML மாடுலர் கோப்பு
