--- a/umbrello/umbrello.desktop
+++ b/umbrello/umbrello.desktop
@@ -33,7 +33,7 @@ GenericName[pt_BR]=Modelador UML
 GenericName[ru]=Средство UML моделирования
 GenericName[sk]=Modelár UML
 GenericName[sl]=Mofdelirnik UML
-GenericName[sr]=Umbrello UML моделар
+GenericName[sr]=UML моделар
 GenericName[sr@Latn]=Umbrello UML modelar
 GenericName[sv]=UML-modellering
 GenericName[ta]=UML மோடெல்லார்
