SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdesdk/umbrello/; revision=434155

--- a/umbrello/umbrello.desktop
+++ b/umbrello/umbrello.desktop
@@ -34,7 +34,7 @@ GenericName[ru]=Средство UML моделирования
 GenericName[sk]=Modelár UML
 GenericName[sl]=Mofdelirnik UML
 GenericName[sr]=UML моделар
-GenericName[sr@Latn]=Umbrello UML modelar
+GenericName[sr@Latn]=UML modelar
 GenericName[sv]=UML-modellering
 GenericName[ta]=UML மோடெல்லார்
 GenericName[tg]=Воситаи UML моделкунонӣ
