--- a/umbrello/x-umbrello.desktop
+++ b/umbrello/x-umbrello.desktop
@@ -31,7 +31,7 @@ Comment[ru]=Файл моделирования UML Umbrello
 Comment[sk]=Súbor pre Umbrello modelár UML
 Comment[sl]=Datoteka za modelirnik Umbrello UML
 Comment[sr]=Фајл Umbrello-а, UML моделара
-Comment[sr@Latn]=fajl Umbrello UML modelara
+Comment[sr@Latn]=Fajl Umbrello-a, UML modelara
 Comment[sv]=Umbrello UML-modelleringsfil
 Comment[ta]=  அம்ரல்லோ UML மாடுலர் கோப்பு
 Comment[tg]=Файли моделкунонии UML Umbrello
