--- a/umbrello/x-umbrello.desktop
+++ b/umbrello/x-umbrello.desktop
@@ -12,7 +12,7 @@ Comment[cs]=Soubor UML modeláře Umbrello
 Comment[cy]=Ffeil Modelydd UML Umbrello
 Comment[da]=Umbrello UML-fil
 Comment[de]=Umbrello-Datei
-Comment[eo]=Dosiero de Umbrello
+Comment[eo]=Dosiero de Umbrello UML-Modelilo
 Comment[es]=Archivo del modeladore UML Umbrello
 Comment[et]=Umbrello UML-fail
 Comment[eu]=Umbrello UML modelatzaile fitxategia
