--- a/umbrello/umbrello.desktop
+++ b/umbrello/umbrello.desktop
@@ -38,6 +38,7 @@ GenericName[sr@Latn]=UML modelar
 GenericName[sv]=UML-modellering
 GenericName[ta]=UML மோடெல்லார்
 GenericName[tg]=Воситаи UML моделкунонӣ
+GenericName[tr]=UML Modelleyici
 GenericName[uk]=Засіб моделювання UML
 GenericName[xx]=xxUML Modellerxx
 GenericName[zh_CN]=UML 建模工具
