* Added ruby code generation using a simple code generator   similar to the python one * C++ style doc comments are converted to ruby RDOC format * Attributes are converted to ruby attr_accessor calls * Multiple inheritance is modelled using single inheritance   from one ruby class, plus mixins corresponding to the other C++   classes, which are included as ruby modules.
CCMAIL: uml-devel@lists.sourceforge.net

svn path=/trunk/KDE/kdesdk/umbrello/; revision=436897

--- a/umbrello/codegenerators/Makefile.am
+++ b/umbrello/codegenerators/Makefile.am
@@ -22,7 +22,7 @@ libcodegenerator_la_SOURCES = codegenfactory.cpp classifierinfo.cpp \
 				cppcodegenerationformbase.ui cppcodegenerationform.cpp \
 				simplecodegenerator.cpp \
 				adawriter.cpp aswriter.cpp cppwriter.cpp javawriter.cpp jswriter.cpp \
-				idlwriter.cpp perlwriter.cpp \
+				idlwriter.cpp perlwriter.cpp rubywriter.cpp \
 				phpwriter.cpp php5writer.cpp pythonwriter.cpp sqlwriter.cpp xmlschemawriter.cpp \
 				xmlelementcodeblock.cpp xmlcodecomment.cpp \
 				codegen_utils.cpp
