Add an alpha version of automatic diagram layout
From Dimitri Ognibene <ognibened @yahoo.it>

http://bugs.kde.org/show_bug.cgi?id=67059

CCMAIL:ognibened@yahoo.it

svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=442493

--- a/umbrello/Makefile.am
+++ b/umbrello/Makefile.am
@@ -99,9 +99,9 @@ widgetbase.cpp \
 widget_utils.cpp \
 worktoolbar.cpp
 
-umbrello_LDADD   = ./refactoring/librefactoring.la ./classparser/libclassparser.la ./clipboard/libclipboard.la ./dialogs/libdialogs.la ./codegenerators/libcodegenerator.la  $(LIB_KDEPRINT) $(LIB_KIO)
+umbrello_LDADD   = ./refactoring/librefactoring.la ./classparser/libclassparser.la ./clipboard/libclipboard.la ./dialogs/libdialogs.la ./codegenerators/libcodegenerator.la ./autolayout/libautolayout.la  $(LIB_KDEPRINT) $(LIB_KIO) 
 
-SUBDIRS = classparser dialogs clipboard pics codegenerators headings diagram refactoring plugins
+SUBDIRS = classparser dialogs clipboard pics codegenerators headings diagram refactoring plugins autolayout
 
 KDE_ICON=AUTO
 
@@ -113,7 +113,7 @@ xdg_apps_DATA = umbrello.desktop
 mimedir = $(kde_mimedir)/application
 mime_DATA = x-umbrello.desktop
 
-INCLUDES= -Idialogs -Irefactoring $(all_includes)
+INCLUDES= -Idialogs -Irefactoring $(all_includes) -I/usr/include/graphviz/
 
 METASOURCES = AUTO
 
