--- a/configure.in.in
+++ b/configure.in.in
@@ -7,6 +7,13 @@ AC_CHECK_HEADER(FlexLexer.h,
 if test "$kde_have_flex" = "no"; then
   DO_NOT_COMPILE="$DO_NOT_COMPILE umbrello"
 fi
+AC_CHECK_HEADER(graphviz/dot.h,
+  [kde_have_graphviz=yes],
+  [kde_have_graphviz=no])
+
+if test "$kde_have_graphviz" = "no"; then
+  DO_NOT_COMPILE="$DO_NOT_COMPILE umbrello"
+fi
 AC_LANG_RESTORE
 
 
