Add autolayout to ui file
svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=442494

--- a/umbrello/umbrelloui.rc
+++ b/umbrello/umbrelloui.rc
@@ -19,6 +19,7 @@
     <Action name="view_clear_diagram"/>
     <Action name="view_delete"/>
     <Action name="view_export_image"/>
+    <Action name="autolayout" />
     <Separator/>
     <Menu name="show_view"><text>Sh&amp;ow</text>
       <ActionList name="view_list">
