Patch from Alan Ezust adds image export via command line. I have not yet tested this stuff; can we close the PR? CCBUG:58809
svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=443195

--- a/umbrello/Makefile.am
+++ b/umbrello/Makefile.am
@@ -43,6 +43,7 @@ entitywidget.cpp \
 enum.cpp \
 enumliteral.cpp \
 enumwidget.cpp \
+exportviewaction.cpp \
 floatingtext.cpp \
 kplayerslideraction.cpp \
 hierarchicalcodeblock.cpp \
