Code import cleanup, take 2: Turn ClassImport into an abstract base class. Move utility methods from ClassImport to import_utils.{h,cpp}. Move implementation of C++ import to new class CppImport.
svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=445002

--- a/umbrello/Makefile.am
+++ b/umbrello/Makefile.am
@@ -16,7 +16,6 @@ classifier.cpp \
 classifiercodedocument.cpp \
 classifierlistitem.cpp \
 classifierwidget.cpp \
-classimport.cpp \
 codeaccessormethod.cpp \
 codeblock.cpp \
 codeblockwithcomments.cpp \
@@ -33,6 +32,7 @@ codeparameter.cpp \
 component.cpp \
 componentwidget.cpp \
 configurable.cpp \
+cppimport.cpp \
 datatype.cpp \
 datatypewidget.cpp \
 dialog_utils.cpp \
@@ -48,6 +48,7 @@ floatingtext.cpp \
 kplayerslideraction.cpp \
 hierarchicalcodeblock.cpp \
 idlimport.cpp \
+import_utils.cpp \
 infowidget.cpp \
 kstartuplogo.cpp \
 linepath.cpp \
