Code import cleanup, take 3: New class NativeImportBase factors common parts for future Umbrello native code import implementations.
svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=445237

--- a/umbrello/Makefile.am
+++ b/umbrello/Makefile.am
@@ -57,6 +57,7 @@ listpopupmenu.cpp \
 main.cpp \
 messagewidget.cpp \
 model_utils.cpp \
+nativeimportbase.cpp \
 node.cpp \
 nodewidget.cpp \
 notewidget.cpp \
