--- a/umbrello/x-umbrello.desktop
+++ b/umbrello/x-umbrello.desktop
@@ -37,5 +37,6 @@ Comment[sv]=Umbrello UML-modelleringsfil
 Comment[ta]=  அம்ரல்லோ UML மாடுலர் கோப்பு
 Comment[tg]=Файли моделкунонии UML Umbrello
 Comment[tr]=Umbrello UML Modelleyici Dosyası
+Comment[uk]=Файл моделювання UML Umbrello
 Comment[xx]=xxUmbrello UML Modeller Filexx
 Comment[zh_CN]=Umbrello UML 建模工具文件
