New class ForkJoinWidget makes the ActivityWidget's fork/join bar reusable in state diagrams and adds possibility to flip the bar between horizontal and vertical.
svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=454044

--- a/umbrello/Makefile.am
+++ b/umbrello/Makefile.am
@@ -46,6 +46,7 @@ enumliteral.cpp \
 enumwidget.cpp \
 exportviewaction.cpp \
 floatingtext.cpp \
+forkjoinwidget.cpp \
 kplayerslideraction.cpp \
 hierarchicalcodeblock.cpp \
 idlimport.cpp \
