SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=464368

--- a/umbrello/umbrello.desktop
+++ b/umbrello/umbrello.desktop
@@ -17,6 +17,7 @@ GenericName[cs]=UML modelář
 GenericName[cy]=Modelydd UML
 GenericName[da]=UML Modellering
 GenericName[de]=UML-Modellierer
+GenericName[el]=Μοντελοποιητής UML
 GenericName[es]=Modelador de UML
 GenericName[et]=UML-i modelleerimise rakendus
 GenericName[fi]=UML-mallintaja
