--- a/umbrello/x-umbrello.desktop
+++ b/umbrello/x-umbrello.desktop
@@ -12,6 +12,7 @@ Comment[cs]=Soubor UML modeláře Umbrello
 Comment[cy]=Ffeil Modelydd UML Umbrello
 Comment[da]=Umbrello UML-fil
 Comment[de]=Umbrello-Datei
+Comment[el]=Αρχείο μοντελοποιητή UML Umbrello
 Comment[eo]=Dosiero de Umbrello UML-Modelilo
 Comment[es]=Archivo del modeladore UML Umbrello
 Comment[et]=Umbrello UML-fail
