--- a/umbrello/umbrello.desktop
+++ b/umbrello/umbrello.desktop
@@ -16,6 +16,7 @@ GenericName[cs]=UML modelář
 GenericName[cy]=Modelydd UML
 GenericName[da]=UML Modellering
 GenericName[de]=UML-Modellierer
+GenericName[el]=Μοντελοποιητής UML
 GenericName[es]=Modelador de UML
 GenericName[et]=UML-i modelleerimise rakendus
 GenericName[eu]=UML modelatzailea
