New class StereotypedWidget factors the m_bShowStereotype from {Classifier,Component,Node,Package}Widget.
svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=468904

--- a/umbrello/Makefile.am
+++ b/umbrello/Makefile.am
@@ -74,6 +74,7 @@ pluginloader.cpp \
 seqlinewidget.cpp \
 statewidget.cpp \
 stereotype.cpp \
+stereotypedwidget.cpp \
 template.cpp \
 textblock.cpp \
 toolbarstate.cpp \
