New base class ResizableWidget factors resize related mouse actions.
svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=468990

--- a/umbrello/Makefile.am
+++ b/umbrello/Makefile.am
@@ -71,6 +71,7 @@ package.cpp \
 packagewidget.cpp \
 plugin.cpp \
 pluginloader.cpp \
+resizablewidget.cpp \
 seqlinewidget.cpp \
 statewidget.cpp \
 stereotype.cpp \
