SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=471562

--- a/umbrello/umbrello.desktop
+++ b/umbrello/umbrello.desktop
@@ -20,6 +20,7 @@ GenericName[de]=UML-Modellierer
 GenericName[el]=Μοντελοποιητής UML
 GenericName[es]=Modelador de UML
 GenericName[et]=UML-i modelleerimise rakendus
+GenericName[eu]=UML modelatzailea
 GenericName[fi]=UML-mallintaja
 GenericName[fr]=Modeleur UML
 GenericName[hi]=यूएमएल मॉडलर
