--- a/umbrello/umbrello.desktop
+++ b/umbrello/umbrello.desktop
@@ -2,7 +2,7 @@
 [Desktop Entry]
 Encoding=UTF-8
 Type=Application
-Exec=umbrello -caption "%c" %i %m
+Exec=umbrello -caption "%c"
 Icon=umbrello
 DocPath=umbrello/index.html
 Terminal=false
