Add Java code import (still work in progress.) CCBUG:56184
svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=492999

--- a/umbrello/Makefile.am
+++ b/umbrello/Makefile.am
@@ -52,6 +52,7 @@ hierarchicalcodeblock.cpp \
 idlimport.cpp \
 import_utils.cpp \
 infowidget.cpp \
+javaimport.cpp \
 kstartuplogo.cpp \
 linepath.cpp \
 linkwidget.cpp \
