CodeGenerator::createDefaultDatatypes(): Replace by defaultDatatypes()  returning QStringList. Move various utility methods from UMLDoc to more appropriate places.
svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=494415

--- a/umbrello/Makefile.am
+++ b/umbrello/Makefile.am
@@ -65,6 +65,7 @@ node.cpp \
 nodewidget.cpp \
 notewidget.cpp \
 objectwidget.cpp \
+object_factory.cpp \
 operation.cpp \
 ownedcodeblock.cpp \
 ownedhierarchicalcodeblock.cpp \
