SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdesdk/umbrello/; revision=495179

--- a/umbrello/x-umbrello.desktop
+++ b/umbrello/x-umbrello.desktop
@@ -6,37 +6,4 @@ Icon=umbrellofile
 DefaultApp=umbrello
 Patterns=*.xmi;*.XMI;*.xmi.tgz;*.xmi.tar.bz2;
 Comment=Umbrello UML Modeller File
-Comment[bs]=Umbrello UML modeler datoteka
-Comment[ca]=Fitxer de model UML
-Comment[cs]=Soubor UML modeláře Umbrello
-Comment[cy]=Ffeil Modelydd UML Umbrello
-Comment[da]=Umbrello UML-fil
-Comment[de]=Umbrello-Datei
-Comment[eo]=Dosiero de Umbrello UML-Modelilo
-Comment[es]=Archivo del modeladore UML Umbrello
-Comment[et]=Umbrello UML-fail
-Comment[eu]=Umbrello UML modelatzaile fitxategia
-Comment[fi]=Umbrello UML-mallinnustiedosto
-Comment[fr]=Fichier du modeleur UML Umbrello
-Comment[hi]=अम्बरैलो यूएमएल मॉडलर फ़ाइल
-Comment[hu]=Umbrello UML-fájl
-Comment[is]=Umbrello UML Modeller Skrá
-Comment[it]=File del modellatore UML Umbrello
-Comment[ja]=Umbrello UML モデラファイル
-Comment[nb]=Umbrello UML-modelleringsfil
-Comment[nl]=Umbrello UML Modeller-bestand
-Comment[pl]=Plik modelera UML Umbrello
-Comment[pt]=Ficheiro do Modelador de UML Umbrello
-Comment[pt_BR]=Arquivo de Modelador UML Umbrello
-Comment[ru]=Файл моделирования UML Umbrello
-Comment[sk]=Súbor pre Umbrello modelár UML
-Comment[sl]=Datoteka za modelirnik Umbrello UML
-Comment[sr]=Фајл Umbrello-а, UML моделара
-Comment[sr@Latn]=Fajl Umbrello-a, UML modelara
-Comment[sv]=Umbrello UML-modelleringsfil
-Comment[ta]=  அம்ரல்லோ UML மாடுலர் கோப்பு
-Comment[tg]=Файли моделкунонии UML Umbrello
-Comment[tr]=Umbrello UML Modelleyici Dosyası
-Comment[uk]=Файл моделювання UML Umbrello
-Comment[xx]=xxUmbrello UML Modeller Filexx
-Comment[zh_CN]=Umbrello UML 建模工具文件
+Comment[x-test]=xxUmbrello UML Modeller Filexx
