--- a/umbrello/umbrello.desktop
+++ b/umbrello/umbrello.desktop
@@ -7,40 +7,8 @@ Icon=umbrello
 DocPath=umbrello/index.html
 Terminal=false
 Name=Umbrello
-Name[hi]=अम्बरैलो
-Name[ta]=  அம்ரல்லோ
-Name[xx]=xxUmbrelloxx
+Name[x-test]=xxUmbrelloxx
 GenericName=UML Modeller
-GenericName[bs]=UML modeler
-GenericName[ca]=Modelador UML
-GenericName[cs]=UML modelář
-GenericName[cy]=Modelydd UML
-GenericName[da]=UML Modellering
-GenericName[de]=UML-Modellierer
-GenericName[es]=Modelador de UML
-GenericName[et]=UML-i modelleerimise rakendus
-GenericName[fi]=UML-mallintaja
-GenericName[fr]=Modeleur UML
-GenericName[hi]=यूएमएल मॉडलर
-GenericName[hu]=UML-modellező
-GenericName[it]=Modellatore UML
-GenericName[ja]=UML モデラ
-GenericName[nb]=UML-modelleringsprogram
-GenericName[nl]=UML-modeller
-GenericName[pl]=Program do modelowania UML
-GenericName[pt]=Modelador de UML
-GenericName[pt_BR]=Modelador UML
-GenericName[ru]=Средство UML моделирования
-GenericName[sk]=Modelár UML
-GenericName[sl]=Mofdelirnik UML
-GenericName[sr]=UML моделар
-GenericName[sr@Latn]=UML modelar
-GenericName[sv]=UML-modellering
-GenericName[ta]=UML மோடெல்லார்
-GenericName[tg]=Воситаи UML моделкунонӣ
-GenericName[tr]=UML Modelleyici
-GenericName[uk]=Засіб моделювання UML
-GenericName[xx]=xxUML Modellerxx
-GenericName[zh_CN]=UML 建模工具
+GenericName[x-test]=xxUML Modellerxx
 MimeType=application/x-uml
 Categories=Qt;KDE;Development;
