Add class PythonImport. Only imports classes and operations, no attributes yet. Python people to the front ;) CCBUG:79648
svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=495324

--- a/umbrello/Makefile.am
+++ b/umbrello/Makefile.am
@@ -17,6 +17,7 @@ classifier.cpp \
 classifiercodedocument.cpp \
 classifierlistitem.cpp \
 classifierwidget.cpp \
+classimport.cpp \
 codeaccessormethod.cpp \
 codeblock.cpp \
 codeblockwithcomments.cpp \
@@ -73,6 +74,7 @@ package.cpp \
 packagewidget.cpp \
 plugin.cpp \
 pluginloader.cpp \
+pythonimport.cpp \
 seqlinewidget.cpp \
 statewidget.cpp \
 stereotype.cpp \
