SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=521290

--- a/umbrello/umbrello.desktop
+++ b/umbrello/umbrello.desktop
@@ -22,6 +22,7 @@ GenericName[et]=UML-i modelleerimise rakendus
 GenericName[eu]=UML modelatzailea
 GenericName[fi]=UML-mallintaja
 GenericName[fr]=Modeleur UML
+GenericName[ga]=Múnlóir UML
 GenericName[hi]=यूएमएल मॉडलर
 GenericName[hu]=UML-modellező
 GenericName[it]=Modellatore UML
