--- a/umbrello/x-umbrello.desktop
+++ b/umbrello/x-umbrello.desktop
@@ -19,6 +19,7 @@ Comment[et]=Umbrello UML-fail
 Comment[eu]=Umbrello UML modelatzaile fitxategia
 Comment[fi]=Umbrello UML-mallinnustiedosto
 Comment[fr]=Fichier du modeleur UML Umbrello
+Comment[ga]=Comhad le haghaidh an Mhúnlóra UML Umbrello
 Comment[hi]=अम्बरैलो यूएमएल मॉडलर फ़ाइल
 Comment[hu]=Umbrello UML-fájl
 Comment[is]=Umbrello UML Modeller Skrá
