Apply attachment 15388 by Daniel Calviño Sánchez with minor changes. CCBUG:58809
svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=525494

--- a/umbrello/dialogs/Makefile.am
+++ b/umbrello/dialogs/Makefile.am
@@ -11,6 +11,7 @@ libdialogs_la_SOURCES = \
 			codeviewerdialogbase.ui \
 			codevieweroptionsbase.ui \
 			diagrampropertiespage.ui \
+			exportallviewsdialogbase.ui \
 			umlrolepropertiesbase.ui \
 activitydialog.cpp \
 activitypage.cpp \
@@ -31,6 +32,7 @@ codeviewerdialog.cpp \
 codevieweroptionspage.cpp \
 defaultcodegenpolicypage.cpp \
 diagramprintpage.cpp \
+exportallviewsdialog.cpp \
 notedialog.cpp \
 overwritedialogue.cpp \
 pkgcontentspage.cpp \
