Attachment 15463 from Daniel Calviño Sánchez fixes the command line crashes. Many thanks Daniel for your fine work. CCBUG:58809
svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=526907

--- a/umbrello/Makefile.am
+++ b/umbrello/Makefile.am
@@ -18,6 +18,7 @@ classifiercodedocument.cpp \
 classifierlistitem.cpp \
 classifierwidget.cpp \
 classimport.cpp \
+cmdlineexportallviewsevent.cpp \
 codeaccessormethod.cpp \
 codeblock.cpp \
 codeblockwithcomments.cpp \
