Continue making factory methods in CodeGenFactory for the various classes required by the advanced code generators. This is necessary because of call-before-construction problems (on constucting a child object, the superclass constructor invokes a virtual method which is reimplemented in the child - but at that point the child object construction is not finalized => segfault) CCBUG:126262
svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=540643

--- a/umbrello/codegenerators/Makefile.am
+++ b/umbrello/codegenerators/Makefile.am
@@ -31,7 +31,7 @@ libcodegenerator_la_SOURCES = codegenfactory.cpp classifierinfo.cpp \
 	idlwriter.cpp perlwriter.cpp phpwriter.cpp php5writer.cpp pythonwriter.cpp \
 	rubywriter.cpp sqlwriter.cpp tclwriter.cpp xmlschemawriter.cpp \
 	xmlelementcodeblock.cpp xmlcodecomment.cpp \
-	ncgof.cpp codegen_utils.cpp
+	codegen_utils.cpp
 libcodegenerator_la_COMPILE_FIRST = ../dialogs/codegenerationpolicybase.h
 
 KDE_OPTIONS = nofinal
